err/rer.bandi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rer'...
Listing './lib/python3.5/site-packages/rer/bandi'...
Listing './lib/python3.5/site-packages/rer/bandi/Extensions'...
Listing './lib/python3.5/site-packages/rer/bandi/browser'...
Listing './lib/python3.5/site-packages/rer/bandi/browser/css'...
Listing './lib/python3.5/site-packages/rer/bandi/browser/images'...
Listing './lib/python3.5/site-packages/rer/bandi/content'...
Compiling './lib/python3.5/site-packages/rer/bandi/filevocabulary.py'...
***   File "./lib/python3.5/site-packages/rer/bandi/filevocabulary.py", line 52
    except lxml.etree.XMLSyntaxError, e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rer/bandi/interfaces'...
Listing './lib/python3.5/site-packages/rer/bandi/locales'...
Listing './lib/python3.5/site-packages/rer/bandi/locales/it'...
Listing './lib/python3.5/site-packages/rer/bandi/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rer/bandi/portlets'...
Listing './lib/python3.5/site-packages/rer/bandi/profiles'...
Listing './lib/python3.5/site-packages/rer/bandi/profiles/default'...
Listing './lib/python3.5/site-packages/rer/bandi/profiles/default/types'...
Listing './lib/python3.5/site-packages/rer/bandi/profiles/migrate_to_2200'...
Listing './lib/python3.5/site-packages/rer/bandi/profiles/uninstall'...
Listing './lib/python3.5/site-packages/rer/bandi/tests'...
Listing './lib/python3.5/site-packages/rer/bandi/tiles'...
Listing './lib/python3.5/site-packages/rer.bandi-3.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
